testsuite/tests/lexical_envs/invalid_entity_resolver/foo.lkt
grammar foo_grammar {
    @main_rule main_rule <- list+(decl)
    decl <- Decl(Name(@identifier) "(" list*(ref) ")")
    ref <- Ref(Name(@identifier))
}
